--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -24,5 +24,7 @@ jobs:
       - name: build and push docker image to registry
         uses: docker/build-push-action@v5
         with:
+          context: .
+          platforms: linux/amd64,linux/arm64        
           push: true
           tags: pierreluc/plex-media-server-exporter:latest
